--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -16,6 +16,42 @@
 	pages = {112}
 }
 
+@ARTICLE{Mendel, 
+	author = {J.B. Reid; J.J. Ross},
+	title = {Mendel's genes: towards a full molecular characterization},
+	journal = {Genetics},
+	year = 2011,
+	volume = 189, 
+	pages = {3--10}
+}
+
+@ARTICLE{Miescher, 
+	author = {R. Dahm},
+	title = {Discovering DNA: Friedrich Miescher and the early years of nucleic acid research},
+	journal = {Human Genetics},
+	year = 2008,
+	volume = 122, 
+	pages = {565--81}
+}
+
+@ARTICLE{Crick, 
+	author = {L. Pauling, R.B. Corey},
+	title = {A proposed structure for the nucleic acids},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	year = 1953,
+	volume = 39, 
+	pages = {84--97}
+}
+
+@ARTICLE{GenomeSize, 
+	author = {International Human Genome Sequencing Consortium},
+	title = {Finishing the euchromatic sequence of the human genome},
+	journal = {Nature},
+	year = 2004,
+	volume = 431, 
+	pages = {931--45}
+}
+
 @BOOK{NIPT,
 	author = {S. Drury, M. Hill, L.S. Chitty},
 	title = {Cell-Free Fetal DNA Testing for Prenatal Diagnosis},
@@ -91,7 +127,7 @@
 }
 
 
-@MISC{,
+@MISC{IGV,
 	title = {IGV download page},
 	howpublished = {http://software.broadinstitute.org/software/igv/}
 }
@@ -130,6 +166,11 @@
 	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
 }
 
+@MISC{Nucleotide,
+	organization = {wikimedia},
+	title = {Nucleotide chemical structure (modified)},
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/DAMP_chemical_structure.png/1024px-DAMP_chemical_structure.png}
+}
 
 @MISC{11,
 	organization = {anatomybox},
