feedback chapter 3 verwerkt

--- a/H2_MBbackground.tex
+++ b/H2_MBbackground.tex
@@ -169,8 +169,8 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 	\begin{figure}[H]
 		%src: PPT van Howest
 		\centering
-		\includegraphics[angle= -90, width=\linewidth]{background/ImProc.png}
-		\caption{From left to right are the pictures taken at each iteration in the flowcell. The sequence determined in the picture is from the lower circled nucleotide sequence. The color at that specific spot marks which nucleotide has been bound. With the use of some image processing techniques the exact sequence in that spot can be identified~\cite{pptHowest}.}
+		\includegraphics[width=\linewidth]{background/ImProc.jpg}
+		\caption{From left to right are the pictures taken at each iteration in the flowcell. The color at that specific spot marks which nucleotide has been bound. With the use of some image processing techniques the exact sequence in that spot can be identified~\cite{pptHowest}.}
 		\label{fig:ImProc}
 	\end{figure}
 	
