--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -7,6 +7,15 @@
 	pages = {195--197}
 }
 
+@ARTICLE{NW, 
+	author = {Saul B. Needleman and Christian D. Wunsch},
+	title = {A general method applicable to the search for similarities in the amino acid sequence of two proteins},
+	journal = {Journal of Molecular Biology},
+	year = 1970,
+	volume = 48, 
+	pages = {443--53}
+}
+
 @ARTICLE{SeqCost, 
 	author = {E. R. Mardis},
 	title = {Anticipating the 1,000 dollar genome},
@@ -169,7 +178,7 @@
 @MISC{Nucleotide,
 	organization = {wikimedia},
 	title = {Nucleotide chemical structure (modified)},
-	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/DAMP_chemical_structure.png/1024px-DAMP_chemical_structure.png}
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/DAMP\_chemical\_structure.png/1024px-DAMP\_chemical\_structure.png}
 }
 
 @MISC{11,
