--- a/H3_Methods.tex
+++ b/H3_Methods.tex
@@ -10,7 +10,7 @@
 
 \section{DNA sequence aligning}
 
-The human genome (e.g. $hg19$) is used as a reference genome for all sequenced human DNA. However, the genetic code of all humans is slightly different, which also holds true for all other organisms. Genetic sequence alignment is the science where you try to align 2 sequences with each other so that the amount of differences is minimal. In this chapter, the most frequently used algorithms are discussed.
+The human genome is used as a reference genome for all sequenced human DNA ($hg19$ is the most widely used). However, the genetic code of all humans is slightly different, which also holds true for all other organisms. Genetic sequence alignment is the science where you try to align 2 sequences with each other so that the amount of differences is minimal. In this chapter, the most frequently used algorithms are discussed.
 
 \subsection{Alignment in general}
 
@@ -94,13 +94,13 @@ Hereunder is a schematic view of some algorithms that are used in practice:
 Keep in mind, a lot of other claimed "algorithms" (for example BFAST, ...), are accelerated versions of the Smith-Waterman algorithm.
 
 \subsection{Needleman-Wunsch}
-Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1970, now known as the \emph{Needleman-Wunsch} (N-W) algorithm. Since this algorithm is meant for global alignment, which is seldomly used in practice, further discussion of the algorithm will not be done. However, N-W has a lot of similarities with the Smith-Waterman algorithm, discussed in the next section.
+Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1970, now known as the \emph{Needleman-Wunsch} (N-W) algorithm~\cite{NW}. Since this algorithm is meant for global alignment, which is seldomly used in practice, further discussion of the algorithm will not be done. However, N-W has a lot of similarities with the Smith-Waterman algorithm, discussed in the next section.
 
 \subsection{Smith-Waterman}
 \label{expl:SWanalyse}
 The \emph{Smith-Waterman} (S-W) algorithm was first proposed by Temple F. Smith and Michael S. Waterman in 1981\cite{SW}. It is a variation on the N-W algorithm, adapted for local alignment. It is a dynamic programming technique, so an optimal local alignment is guaranteed. \\
 
-The core of the algorithm is a matrix fillup, with data dependencies on the previous cells. Hereunder an analysis of the algorithm:
+The core of the algorithm is a matrix fillup with data dependencies on the previous cells. Hereunder an analysis of the algorithm:
 
 \begin{enumerate}
 	\item Symbols used in the analysis:
@@ -142,16 +142,16 @@ The core of the algorithm is a matrix fillup, with data dependencies on the prev
 		
 		\begin{itemize}
 			\item \emph{Linear}: The penalty is constant. So, in this case, it doesn't matter if the previous was also a gap or not.
-			\item \emph{Affine}: An affine gap penalty considers gap opening and extension separately. For the sake of simplicity, my further implementation will not include this refinement of the algorithm. The algorithm can be extended to include this affine gap penalty, but this would make the algorithm more complex and we would limit our ability to develop possible accelerations. It is also expected to affect the DNA mapping on a reference genome. However, if we assume the size of the gaps as small, there won't be much difference in result in comparison with the linear penalty score.
+			\item \emph{Affine}: An affine gap penalty considers gap opening and extension separately. For the sake of simplicity, my further implementation will not include this refinement of the algorithm. The algorithm can be extended to include this affine gap penalty, but this would make the algorithm more complex and we would limit our ability to develop possible accelerations. It is also expected to affect the DNA mapping on a reference genome. However, if we assume the size of the gaps are small, there won't be much difference in result in comparison with the linear penalty score.
 		\end{itemize}
 		
 		
 	\end{itemize}
 	
 	
-	\item The initialization: We construct a scoring matrix $H$ with dimensions $(n+1)\times(m+1)$. The first column and first row we initialize with $0$.
+	\item The initialization: We construct a scoring matrix $H$ with size $(n+1)\times(m+1)$. The first column and first row are initialized with $0$.
 	
-	For example: if we want to align the sequences A = $TGTTACGG$ and B = $GGTTGACTA$:
+	For example: if we want to align the sequences A =$GGTTGACTA$ and B = $TGTTACGG$:
 	
 	\begin{table}[H]
 		\centering
@@ -243,16 +243,16 @@ The core of the algorithm is a matrix fillup, with data dependencies on the prev
 			\multicolumn{1}{r|}{T} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{3}                         & \multicolumn{1}{r|}{1}                         & \multicolumn{1}{r|}{5}                         & \multicolumn{1}{r|}{4}                         & \multicolumn{1}{r|}{6}                          & \multicolumn{1}{r|}{11}                         & \multicolumn{1}{r|}{10} & \multicolumn{1}{r|}{8} \\ \cline{2-10} 
 			\multicolumn{1}{r|}{A} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{1}                         & \multicolumn{1}{r|}{0}                         & \multicolumn{1}{r|}{3}                         & \multicolumn{1}{r|}{2}                         & \multicolumn{1}{r|}{7}                          & \multicolumn{1}{r|}{9}                          & \multicolumn{1}{r|}{8}  & \multicolumn{1}{r|}{7} \\ \cline{2-10} 
 		\end{tabular}
-		\caption{\centering Example of a traceback in S-W}
+		\caption{\centering A traceback in S-W. For example, the 13 in the blue colored cell is based on the cell with value 10 in on the left-up diagonal (match). Therefore, the path will jump to the cell with value 10. This is repeated until a 0 cell is hit.}
 	\end{table}
 	
 	From this traceback we can now deduce the following alignment:
 	
-	\begin{lcverbatim}
-		GTT-AC
-		||||||
-		GTTGAC
-	\end{lcverbatim}
+\begin{lcverbatim}
+GTT-AC
+||||||
+GTTGAC
+\end{lcverbatim}
 	
 	This alignment is the output of our algorithm.
 	
@@ -264,7 +264,7 @@ The core of the algorithm is a matrix fillup, with data dependencies on the prev
 
 From the DNA sequencing machines, we get a big amount of reads in the FASTQ format. We should note that all these reads are worthless without a proper interpretation.
 
-In most cases, the first step in the analysis of the reads is knowing from which part of the genome it's derived. Typically, the read is compared with the whole genome in a local alignment, for example with the Smith-Waterman algorithm. As an output, we would get the position in the human genome and an alignment with its score (how well the sequence fits in that spot). This practice is commonly referred to as \emph{Mapping to reference genome}.
+In most cases, the first step in the analysis of the reads is knowing from which part of the genome it's derived. Typically, the read is compared with the whole genome in a local alignment, for example using the Smith-Waterman algorithm. As an output, we would get the position in the human genome and an alignment with its score (how well the sequence fits in that spot). This practice is commonly referred to as \emph{Mapping to reference genome}.
 
 Since the reads from DNA sequencing machines are 75 to 300 bases long, and the whole human genome is approximately 3 billion bases, this comparison is computationally a very intensive task. If we analyze the S-W algorithm (as we have done in Subsection~\ref{expl:SWanalyse}), we can see that the value of each cell in the matrix is only dependent on the left-upmost 3 cells. Therefore, It leads us to believe that this algorithm can be accelerated on other hardware solutions such as an FPGA (which will be discussed in Chapter~\ref{ch:Platforms}) since S-W is heavily parallelizable.
 
@@ -296,7 +296,7 @@ As a convention, the output of mapping algorithms is in a \emph{SAM} (Sequence A
 
 \subsubsection{Header}
 The header is used for information that is independent of the alignments, such as the name of the used algorithm, reference genome, used commands during generation, etc.
-The header must be at the beginning of the file, before the alignment section. Each line of the header field must start with an '@' character, so these lines are easily distinguished from lines the alignment section.
+The header must be at the beginning of the file, before the alignment section. Each line of the header field must start with an '@' character, so these lines are easily distinguished from lines in the alignment section.
 
 \subsubsection{Alignment Section}
 Each line in the alignment section represents one mapped sequence and consists of 11 mandatory and some optional fields, which are separated with a tab.
@@ -344,13 +344,23 @@ In this example:
 	\item The mapping quality is 254
 	\item CIGAR = $7M$, so a perfect match
 	\item The sequence is $GTTAAAG$ with quality $BBBBBCB$
+	
+	\item \textbf{Qname}: the name of the sequence: $SRR11$.
+	\item \textbf{FLAG}: this read is matched in the $[5' -> 3']$ direction.
+	\item \textbf{Rname}: the name of the reference genome us $MN98$.
+	\item \textbf{Pos}: the match is found at the 25th base of the reference genome.
+	\item \textbf{MapQ}: the mapping quality is 254.
+	\item \textbf{CIGAR}: $7M$, so a perfect match.
+	\item \textbf{Rnext, Pnext and Tlen}: data not provided.
+	
+	\item \textbf{Seq and Qual}: the sequence is $GTTAAAG$ with quality $BBBBBCB$.
 \end{itemize}
 
 \subsection{Clinical application}
 
 In virtually all sequencing applications DNA alignment and reference mapping is needed. Applications which involve whole genome sequencing are particullarly hampered by a long computational analysis time.
 
-We will discuss as examples two clinical applications of mapping to a reference genome.
+We will discuss two clinical applications as examples to genome mapping.
 
 \begin{enumerate}
 	\item \textbf{\emph{NIPT} (non-invasive prenatal testing), a test for detecting genetic defects in a foetus.}\newline
