--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -61,6 +61,15 @@
 	pages = {931--45}
 }
 
+@ARTICLE{FPGAeff, 
+	author = {Khaled Benkrid},
+	title = {High Performance Biological Pairwise Sequence Alignment: FPGA versus GPU versus Cell BE versus GPP},
+	journal = {International Journal of Reconfigurable Computing},
+	year = 2012,
+	volume = 2012, 
+	pages = {Article ID 752910}
+}
+
 @BOOK{NIPT,
 	author = {S. Drury, M. Hill, L.S. Chitty},
 	title = {Cell-Free Fetal DNA Testing for Prenatal Diagnosis},
