--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -233,3 +233,11 @@
 	title = {FPGA Acceleration of Short Read Alignment},
 	year = 2012
 }
+
+@MISC{martinek,
+	title = {Xilinx vivado HLS},
+	author = {Tom\'a\vs Mart\'inek},
+	organization = {Brno University of Technology, Faculty of Information Technology
+Božetěchova 2, 612 66 Brno},
+	year = 2020
+}
