--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -97,7 +97,7 @@ Also, keep note that the FillIn layer should keep track of the maximum location 
 		\item Check if it is bigger than the current maximum. If so, the current maximum should be this new cell. 
 	\end{enumerate}
 	\item Set current diagonal to the next one.
-	\item Shift the values ($cD \rightarrow pD$ and $pD \rightarrow ppD$) and repeat from step~\ref{everyCell}, until the full matrix is filled.
+	\item Shift the values ($cD \rightarrow pD$ and $pD \rightarrow ppD$) and repeat from step~\ref{everyCell}, until the total matrix is filled.
 	\item Return the position of the maximum to the alignment level.
 \end{enumerate}
 
