Future work aangevult

--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -26,7 +26,7 @@
 }
 
 @ARTICLE{Mendel, 
-	author = {J.B. Reid; J.J. Ross},
+	author = {J.B. Reid and J.J. Ross},
 	title = {Mendel's genes: towards a full molecular characterization},
 	journal = {Genetics},
 	year = 2011,
@@ -44,7 +44,7 @@
 }
 
 @ARTICLE{Crick, 
-	author = {L. Pauling, R.B. Corey},
+	author = {L. Pauling and R.B. Corey},
 	title = {A proposed structure for the nucleic acids},
 	journal = {Proceedings of the National Academy of Sciences of the United States of America},
 	year = 1953,
@@ -63,7 +63,7 @@
 
 @ARTICLE{FPGAeff, 
 	author = {Khaled Benkrid},
-	title = {High Performance Biological Pairwise Sequence Alignment: FPGA versus GPU versus Cell BE versus GPP},
+	title = {High Performance Biological Pairwise Sequence Alignment: {FPGA} versus {GPU} versus {Cell BE} versus {GPP}},
 	journal = {International Journal of Reconfigurable Computing},
 	year = 2012,
 	volume = 2012, 
@@ -71,7 +71,7 @@
 }
 
 @BOOK{NIPT,
-	author = {S. Drury, M. Hill, L.S. Chitty},
+	author = {S. Drury, M. Hill and L.S. Chitty},
 	title = {Cell-Free Fetal DNA Testing for Prenatal Diagnosis},
 	year = 2016,
 	publisher = {Elsevier, Inc.}
@@ -115,7 +115,7 @@
 
 @MISC{pptHowest,
 	author = {Friedel Nollet},
-	title = {powerpoint: HOWEST cursus 'nieuwste ontwikkelingen in de biotechnologie' 2019-2020 Hoofdstuk Sanger and NGS (dutch)},
+	title = {powerpoint: HOWEST cursus 'nieuwste ontwikkelingen in de biotechnologie' 2019-2020 Hoofdstuk Sanger and {NGS} (dutch)},
 	year = 2019
 }
 
@@ -140,20 +140,20 @@
 @MISC{fpga100x,
 	author = {O.O. Storaasli, D. Strenski},
 	year = 2011,
-	title = {Accelerating Genome Sequencing 100X with FPGAs},
+	title = {Accelerating Genome Sequencing 100X with {FPGAs}},
 	howpublished = {http://ft.ornl.gov/~olaf/pubs/RSSIOlafDave.pdf}
 }
 
 
 @MISC{IGV,
-	title = {IGV download page},
+	title = {{IGV} download page},
 	howpublished = {http://software.broadinstitute.org/software/igv/}
 }
 
 
 @MISC{11,
 	organization = {University of Washington},
-	title = {Genome of coronavirus, NCBI},
+	title = {Genome of coronavirus, {NCBI}},
 	howpublished = {https://www.ncbi.nlm.nih.gov/sra/SRX7852918}
 }
 
@@ -167,14 +167,15 @@
 
 @MISC{dna,
 	organization = {wikimedia},
-	title = {Double stranded DNA with coloured bases},
+	title = {Double stranded {DNA} with coloured bases},
 	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double\_stranded\_DNA\_with\_coloured\_bases.png/1024px-Double\_stranded\_DNA\_with\_coloured\_bases.png}
 }
 
 
 @MISC{dnachemical,
 	organization = {wikimedia},
-	title = {DNA chemical structure}
+	title = {{DNA} chemical structure}
+	howpublished = {https://en.wikipedia.org/wiki/DNA}
 }
 
 
@@ -218,7 +219,7 @@
 
 @MISC{fpgaworkings,
 	organization = {loyola},
-	title = {FPGA diagram},
+	title = {{FPGA} diagram},
 	howpublished = {https://evergreen.loyola.edu/dhhoe/www/FPGA\_diagram.png}
 }
 
@@ -230,12 +231,12 @@
 
 @MISC{FPGAacc2, 
 	author = {Nathaniel McVicar, et al},
-	title = {FPGA Acceleration of Short Read Alignment},
+	title = {{FPGA} Acceleration of Short Read Alignment},
 	year = 2012
 }
 
 @MISC{martinek,
-	title = {Xilinx vivado HLS},
+	title = {Xilinx vivado {HLS}},
 	author = {Tom\'a\vs Mart\'inek},
 	organization = {Brno University of Technology, Faculty of Information Technology
 Božetěchova 2, 612 66 Brno},
