--- a/thesis.tex
+++ b/thesis.tex
@@ -162,8 +162,8 @@
 
 % Eventueel enkele appendices
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\appendix
-%\input{bijlage1}
+\appendix
+\input{bijlage1}
 
 % Back cover: change according to the correct campus
 % \includepdf{private/back_fiiw_denayer.pdf}
